src/test/resources/invalid_tests/ArgumentConstraintTest2.cnna
architecture ArgumentConstraintTest2(img_height=224, img_width=224, img_channels=3, classes=1000){
    def input Z(0:255)^{img_height, img_width, img_channels} image
    def output Q(0:1)^{classes} predictions

    def conv(filter, channels, stride=1, act=true){
        Convolution(kernel=(filter,filter), channels=channels, stride=(stride,stride)) ->
        BatchNorm() ->
        Relu(If=act)
    }
    def skip(channels, stride){
        Convolution(kernel=(1,1), channels=96, stride=(stride,-stride)) ->
        BatchNorm()
    }
    def resLayer(channels, stride=1){
        (
            conv(filter=3, channels=channels, stride=stride) ->
            conv(filter=3, channels=channels, stride=stride, act=false)
        |
            skip(channels=channels, stride=stride, If=(stride!=1))
        ) ->
        Add() ->
        Relu()
    }

    image ->
    conv(filter=7, channels=64, stride=2) ->
    MaxPooling(kernel=(3,3), stride=(2,2)) ->
    resLayer(channels=64, ->=3) ->
    resLayer(channels=128, stride=2) ->
    AveragePooling(global=true) ->
    FullyConnected(units=classes) ->
    Softmax() ->
    predictions
}
